Primera versión del protafolio

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App > section {
+  width: 100vw;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +34,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.cursor {
+  background-color: #111;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
